@@ -6,12 +6,18 @@ import java.util.Deque;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.dataflowanalysis.analysis.core.ActionSequence;
+import org.dataflowanalysis.analysis.core.AbstractTransposeFlowGraph;
+import org.dataflowanalysis.analysis.pcm.core.AbstractPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.PCMFlowGraphCollection;
+import org.dataflowanalysis.analysis.pcm.core.PCMTransposeFlowGraph;
+import org.dataflowanalysis.analysis.pcm.core.seff.CallingSEFFPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.seff.SEFFPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.user.CallingUserPCMVertex;
 import org.eclipse.emf.ecore.EClass;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.palladiosimulator.pcm.allocation.Allocation;
+import org.palladiosimulator.pcm.allocation.AllocationContext;
 import org.palladiosimulator.pcm.core.composition.AssemblyContext;
 import org.palladiosimulator.pcm.core.composition.Connector;
 import org.palladiosimulator.pcm.core.entity.Entity;
@@ -30,21 +36,16 @@ import org.palladiosimulator.pcm.system.System;
 import org.palladiosimulator.pcm.system.SystemPackage;
 import org.palladiosimulator.pcm.usagemodel.UsageModel;
 import org.palladiosimulator.pcm.usagemodel.UsageScenario;
-import org.dataflowanalysis.analysis.core.AbstractActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.AbstractPCMActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.seff.CallingSEFFActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.seff.SEFFActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.user.CallingUserActionSequenceElement;
 import org.dataflowanalysis.analysis.pcm.resource.PCMResourceProvider;
 import org.dataflowanalysis.analysis.pcm.utils.PCMQueryUtils;
 
 public class PropagationHelper {
 
-	private List<ActionSequence> actionSequences;
+	private final PCMFlowGraphCollection flowGraphs;
 	private final PCMResourceProvider resourceProvider;
 
-	public PropagationHelper(List<ActionSequence> actionSequences, PCMResourceProvider resourceProvider) {
-		this.actionSequences = actionSequences;
+	public PropagationHelper(PCMFlowGraphCollection flowGraphs, PCMResourceProvider resourceProvider) {
+		this.flowGraphs = flowGraphs;
 		this.resourceProvider = resourceProvider;
 	}
 
@@ -55,13 +56,15 @@ public class PropagationHelper {
 	}
 
 	public Optional<? extends Entity> findAction(String id) {
-		for (ActionSequence sequence : actionSequences) {
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> EcoreUtil.getID(it.getElement()).equals(id)).toList();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var candidates = transposeFlowGraph.getVertices().stream()
+					.map(AbstractPCMVertex.class::cast)
+					.filter(it -> EcoreUtil.getID(it.getReferencedElement()).equals(id))
+					.toList();
 
-			if (candidates.size() > 0) {
-				return candidates.stream().map(AbstractPCMActionSequenceElement::getElement)
-						.filter(Entity.class::isInstance).map(Entity.class::cast).findFirst();
+			if (!candidates.isEmpty()) {
+				return candidates.stream().map(AbstractPCMVertex::getReferencedElement)
+						.filter(Objects::nonNull).findFirst();
 			}
 		}
 
@@ -69,212 +72,205 @@ public class PropagationHelper {
 	}
 
 	public Optional<OperationInterface> findInterface(String id) {
-		return lookupRepositoryModel().getInterfaces__Repository().stream().filter(it -> it.getId().equals(id))
-				.filter(OperationInterface.class::isInstance).map(OperationInterface.class::cast).findFirst();
+		return this.lookupRepositoryModel().getInterfaces__Repository().stream()
+				.filter(it -> it.getId().equals(id))
+				.filter(OperationInterface.class::isInstance)
+				.map(OperationInterface.class::cast)
+				.findFirst();
 	}
 
 	public Optional<OperationSignature> findSignature(String id) {
-		return lookupRepositoryModel().getInterfaces__Repository().stream().filter(OperationInterface.class::isInstance)
-				.map(OperationInterface.class::cast).map(it -> it.getSignatures__OperationInterface())
-				.flatMap(Collection::stream).filter(it -> it.getId().equals(id)).findFirst();
+		return this.lookupRepositoryModel().getInterfaces__Repository().stream()
+				.filter(OperationInterface.class::isInstance)
+				.map(OperationInterface.class::cast)
+				.map(OperationInterface::getSignatures__OperationInterface)
+				.flatMap(Collection::stream)
+				.filter(it -> it.getId().equals(id))
+				.findFirst();
 
 	}
 
 	public Optional<Connector> findConnector(String id) {
-		return lookupSystemModel().getConnectors__ComposedStructure().stream().filter(it -> it.getId().equals(id))
+		return this.lookupSystemModel().getConnectors__ComposedStructure().stream()
+				.filter(it -> it.getId().equals(id))
 				.findFirst();
 	}
 
 	public Optional<ResourceContainer> findResourceContainer(String id) {
-		return lookupResourceEnvironmentModel().getResourceContainer_ResourceEnvironment().stream()
-				.filter(it -> it.getId().equals(id)).findFirst();
-	}
-
-	public Optional<UsageScenario> findUsageScenario(String id) {
-		return lookupUsageModel().getUsageScenario_UsageModel().stream().filter(it -> it.getId().equals(id))
+		return this.lookupResourceEnvironmentModel().getResourceContainer_ResourceEnvironment().stream()
+				.filter(it -> it.getId().equals(id))
 				.findFirst();
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfAssemblyContext(AssemblyContext component) {
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
+	public Optional<UsageScenario> findUsageScenario(String id) {
+		return this.lookupUsageModel().getUsageScenario_UsageModel().stream()
+				.filter(it -> it.getId().equals(id))
+				.findFirst();
+	}
 
-		for (ActionSequence sequence : actionSequences) {
-			@SuppressWarnings("unchecked")
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> (it.getElement() instanceof StartAction))
+	public List<SEFFPCMVertex<?>> findStartActionsOfAssemblyContext(AssemblyContext component) {
+		List<SEFFPCMVertex<?>> matches = new ArrayList<>();
+
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var candidates = transposeFlowGraph.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> it.getReferencedElement() instanceof StartAction)
 					.filter(it -> it.getContext().contains(component))
-					.map(it -> (SEFFActionSequenceElement<StartAction>) it).toList();
-
+					.map(it -> (SEFFPCMVertex<?>) it)
+					.toList();
 			matches.addAll(candidates);
 		}
-
 		return matches;
 	}
 
-	public List<AbstractPCMActionSequenceElement<?>> findProccessesWithAction(Entity action) {
-		List<AbstractPCMActionSequenceElement<?>> matches = new ArrayList<>();
-
-		for (ActionSequence sequence : actionSequences) {
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it.getElement().equals(action)).map(it -> (AbstractPCMActionSequenceElement<?>) it)
+	public List<AbstractPCMVertex<?>> findProcessesWithAction(Entity action) {
+		List<AbstractPCMVertex<?>> matches = new ArrayList<>();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var candidates = transposeFlowGraph.getVertices().stream()
+					.map(AbstractPCMVertex.class::cast)
+					.filter(it -> it.getReferencedElement().equals(action))
+					.map(it -> (AbstractPCMVertex<?>) it)
 					.toList();
 
 			matches.addAll(candidates);
 		}
-
 		return matches;
 	}
 
-	public List<CallingUserActionSequenceElement> findEntryLevelSystemCallsViaInterface(OperationInterface interfaze) {
-		List<CallingUserActionSequenceElement> matches = new ArrayList<>();
-
-		for (ActionSequence sequence : actionSequences) {
-			var entryLevelSystemCalls = sequence.getElements().stream()
-					.filter(CallingUserActionSequenceElement.class::isInstance)
-					.map(CallingUserActionSequenceElement.class::cast).toList();
+	public List<CallingUserPCMVertex> findEntryLevelSystemCallsViaInterface(OperationInterface interfaze) {
+		List<CallingUserPCMVertex> matches = new ArrayList<>();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var entryLevelSystemCalls = transposeFlowGraph.getVertices().stream()
+					.filter(CallingUserPCMVertex.class::isInstance)
+					.map(CallingUserPCMVertex.class::cast).toList();
 			var entryLevelSystemCallsCandidates = entryLevelSystemCalls.stream()
 					.filter(it -> interfaze.getSignatures__OperationInterface()
-							.contains(it.getElement().getOperationSignature__EntryLevelSystemCall()))
+							.contains(it.getReferencedElement().getOperationSignature__EntryLevelSystemCall()))
 					.toList();
 			matches.addAll(entryLevelSystemCallsCandidates);
-
 		}
-
 		return matches;
 	}
 
-	public List<CallingUserActionSequenceElement> findEntryLevelSystemCallsViaSignature(OperationSignature signature) {
+	public List<CallingUserPCMVertex> findEntryLevelSystemCallsViaSignature(OperationSignature signature) {
 		var candidates = findEntryLevelSystemCallsViaInterface(signature.getInterface__OperationSignature());
-
 		return candidates.stream()
-				.filter(it -> it.getElement().getOperationSignature__EntryLevelSystemCall().equals(signature)).toList();
-	}
-
-	public List<CallingSEFFActionSequenceElement> findExternalCallsViaInterface(OperationInterface interfaze) {
-		List<CallingSEFFActionSequenceElement> matches = new ArrayList<>();
-
-		for (ActionSequence sequence : actionSequences) {
-			var externalCalls = sequence.getElements().stream()
-					.filter(CallingSEFFActionSequenceElement.class::isInstance)
-					.map(CallingSEFFActionSequenceElement.class::cast).toList();
-
-			var externalCallCandidates = externalCalls.stream().filter(it -> interfaze
-					.getSignatures__OperationInterface().contains(it.getElement().getCalledService_ExternalService()))
-					.toList();
-			matches.addAll(externalCallCandidates);
-		}
-
-		return matches;
-	}
-
-	public List<CallingSEFFActionSequenceElement> findExternalCallsViaSignature(OperationSignature signature) {
-		var candidates = this.findExternalCallsViaInterface(signature.getInterface__OperationSignature());
-
-		return candidates.stream().filter(it -> it.getElement().getCalledService_ExternalService().equals(signature))
+				.filter(it -> it.getReferencedElement().getOperationSignature__EntryLevelSystemCall().equals(signature))
 				.toList();
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfSEFFsThatImplement(
-			OperationInterface interfaze) {
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
-
-		for (ActionSequence sequence : actionSequences) {
-			@SuppressWarnings("unchecked")
-			var startActions = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> (it.getElement() instanceof StartAction))
-					.map(it -> (SEFFActionSequenceElement<StartAction>) it).toList();
-
-			for (SEFFActionSequenceElement<StartAction> action : startActions) {
-				if (action.getElement().eContainer() instanceof ResourceDemandingSEFF seff) {
-					if (interfaze.getSignatures__OperationInterface().contains(seff.getDescribedService__SEFF())) {
-						matches.add(action);
-					}
-				}
-			}
+	public List<CallingSEFFPCMVertex> findExternalCallsViaInterface(OperationInterface interfaze) {
+		List<CallingSEFFPCMVertex> matches = new ArrayList<>();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var externalCalls = transposeFlowGraph.getVertices().stream()
+					.filter(CallingSEFFPCMVertex.class::isInstance)
+					.map(CallingSEFFPCMVertex.class::cast).toList();
+			var externalCallCandidates = externalCalls.stream()
+					.filter(it -> interfaze.getSignatures__OperationInterface().contains(it.getReferencedElement().getCalledService_ExternalService()))
+					.toList();
+			matches.addAll(externalCallCandidates);
 		}
-
 		return matches;
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfSEFFsThatImplement(
+	public List<CallingSEFFPCMVertex> findExternalCallsViaSignature(OperationSignature signature) {
+		var candidates = this.findExternalCallsViaInterface(signature.getInterface__OperationSignature());
+		return candidates.stream()
+				.filter(it -> it.getReferencedElement().getCalledService_ExternalService().equals(signature))
+				.toList();
+	}
+
+	public List<SEFFPCMVertex<?>> findStartActionsOfSEFFsThatImplement(
+			OperationInterface interfaze) {
+		List<SEFFPCMVertex<?>> matches = new ArrayList<>();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var startActions = transposeFlowGraph.getVertices().stream()
+					.map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> (it.getReferencedElement() instanceof StartAction))
+					.map(it -> (SEFFPCMVertex<?>) it)
+					.toList();
+
+			for (SEFFPCMVertex<?> action : startActions) {
+				if (!(action.getReferencedElement().eContainer() instanceof ResourceDemandingSEFF seff)) {
+					continue;
+				}
+				if (!(seff.getDescribedService__SEFF() instanceof OperationSignature operationSignature)) {
+					continue;
+				}
+				if (interfaze.getSignatures__OperationInterface().contains(operationSignature)) {
+					matches.add(action);
+				}
+			}
+		}
+		return matches;
+	}
+
+	public List<SEFFPCMVertex<?>> findStartActionsOfSEFFsThatImplement(
 			OperationSignature signature) {
 		var actionsThatImplementInterface = this
 				.findStartActionsOfSEFFsThatImplement(signature.getInterface__OperationSignature());
-
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
-
-		for (SEFFActionSequenceElement<StartAction> action : actionsThatImplementInterface) {
-			if (action.getElement().eContainer() instanceof ResourceDemandingSEFF seff) {
+		List<SEFFPCMVertex<?>> matches = new ArrayList<>();
+		for (SEFFPCMVertex<?> action : actionsThatImplementInterface) {
+			if (action.getReferencedElement().eContainer() instanceof ResourceDemandingSEFF seff) {
 				if (signature.equals(seff.getDescribedService__SEFF())) {
 					matches.add(action);
 				}
 			}
 		}
-
 		return matches;
 	}
 
-	public List<ActionSequence> findActionSequencesWithElement(AbstractActionSequenceElement<?> element) {
-		return actionSequences.stream().filter(it -> it.getElements().contains(element)).toList();
+	public List<PCMTransposeFlowGraph> findTransposeFlowGraphsWithElement(AbstractPCMVertex<?> element) {
+		return flowGraphs.getTransposeFlowGraphs().stream()
+				.filter(PCMTransposeFlowGraph.class::isInstance)
+				.filter(it -> it.getVertices().contains(element))
+				.map(PCMTransposeFlowGraph.class::cast)
+				.toList();
 	}
 
 	private List<Deque<AssemblyContext>> findAllAssemblyContexts() {
 		List<Deque<AssemblyContext>> allContexts = new ArrayList<>();
-
-		for (ActionSequence sequence : actionSequences) {
-			List<Deque<AssemblyContext>> contexts = sequence.getElements().stream()
-					.map(AbstractPCMActionSequenceElement.class::cast).map(it -> it.getContext())
-					.collect(Collectors.toList());
-
-			allContexts.addAll(contexts);
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			for (AbstractPCMVertex<?> vertex : transposeFlowGraph.getVertices().stream()
+					.filter(AbstractPCMVertex.class::isInstance)
+					.map(AbstractPCMVertex.class::cast)
+					.toList()) {
+				allContexts.add(vertex.getContext());
+			}
 		}
-
 		return allContexts;
 	}
 
-	public List<? extends AbstractPCMActionSequenceElement<?>> findProcessesThatRepresentResourceContainerOrUsageScenario(
+	public List<? extends AbstractPCMVertex<?>> findProcessesThatRepresentResourceContainerOrUsageScenario(
 			Entity actor) {
-
 		if (actor instanceof UsageScenario usageScenario) {
-			List<CallingUserActionSequenceElement> matches = new ArrayList<>();
-
-			for (ActionSequence sequence : actionSequences) {
-				var callingUserActions = sequence.getElements().stream()
-						.filter(CallingUserActionSequenceElement.class::isInstance)
-						.map(CallingUserActionSequenceElement.class::cast).toList();
-
-				List<CallingUserActionSequenceElement> candidates = callingUserActions.stream()
-						.filter(it -> it.getElement().getScenarioBehaviour_AbstractUserAction()
+			List<CallingUserPCMVertex> matches = new ArrayList<>();
+			for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+				var callingUserActions = transposeFlowGraph.getVertices().stream()
+						.filter(CallingUserPCMVertex.class::isInstance)
+						.map(CallingUserPCMVertex.class::cast).toList();
+				List<CallingUserPCMVertex> candidates = callingUserActions.stream()
+						.filter(it -> it.getReferencedElement().getScenarioBehaviour_AbstractUserAction()
 								.getUsageScenario_SenarioBehaviour().equals(usageScenario))
 						.toList();
-
 				matches.addAll(candidates);
 			}
-
 			return matches;
-
 		} else if (actor instanceof ResourceContainer resourceContainer) {
-
-			var allocationModel = lookupAllocationModel();
-
+			var allocationModel = this.lookupAllocationModel();
 			var contextsDeployedOnResource = allocationModel.getAllocationContexts_Allocation().stream()
 					.filter(it -> it.getResourceContainer_AllocationContext().equals(resourceContainer))
-					.map(it -> it.getAssemblyContext_AllocationContext()).toList();
-
-			List<SEFFActionSequenceElement<?>> matches = new ArrayList<>();
-
-			for (ActionSequence sequence : actionSequences) {
-				var candidates = sequence.getElements().stream().filter(SEFFActionSequenceElement.class::isInstance)
-						.map(it -> (SEFFActionSequenceElement<?>) it)
-						.filter(it -> it.getContext().stream().anyMatch(contextsDeployedOnResource::contains)).toList();
-
+					.map(AllocationContext::getAssemblyContext_AllocationContext).toList();
+			List<SEFFPCMVertex<?>> matches = new ArrayList<>();
+			for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+				var candidates = transposeFlowGraph.getVertices().stream().filter(SEFFPCMVertex.class::isInstance)
+						.map(it -> (SEFFPCMVertex<?>) it)
+						.filter(it -> it.getContext().stream().anyMatch(contextsDeployedOnResource::contains))
+						.toList();
 				matches.addAll(candidates);
 			}
-
 			return matches;
-
 		} else {
 			throw new IllegalArgumentException("Actor must be an usage scenario or a resource container.");
 		}
@@ -283,11 +279,10 @@ public class PropagationHelper {
 	private <T extends NamedElement> T lookupPCMModel(EClass eclazz, Class<T> clazz) {
 		Objects.requireNonNull(eclazz);
 		Objects.requireNonNull(clazz);
-
-		List<T> allPCMModelsOfGivenType = resourceProvider.lookupToplevelElement(eclazz).stream().filter(clazz::isInstance)
+		List<T> allPCMModelsOfGivenType = resourceProvider.lookupToplevelElement(eclazz).stream()
+				.filter(clazz::isInstance)
 				.map(clazz::cast).toList();
-
-		if (allPCMModelsOfGivenType.size() == 1) {
+		if (!allPCMModelsOfGivenType.isEmpty()) {
 			return allPCMModelsOfGivenType.get(0);
 		} else {
 			throw new IllegalStateException(String.format(
@@ -296,39 +291,39 @@ public class PropagationHelper {
 	}
 
 	private Repository lookupRepositoryModel() {
-		return lookupPCMModel(RepositoryPackage.eINSTANCE.getRepository(), Repository.class);
+		return this.lookupPCMModel(RepositoryPackage.eINSTANCE.getRepository(), Repository.class);
 	}
 
 	private System lookupSystemModel() {
-		return lookupPCMModel(SystemPackage.eINSTANCE.getSystem(), System.class);
+		return this.lookupPCMModel(SystemPackage.eINSTANCE.getSystem(), System.class);
 	}
 
 	private ResourceEnvironment lookupResourceEnvironmentModel() {
-		return lookupPCMModel(ResourceenvironmentPackage.eINSTANCE.getResourceEnvironment(), ResourceEnvironment.class);
+		return this.lookupPCMModel(ResourceenvironmentPackage.eINSTANCE.getResourceEnvironment(), ResourceEnvironment.class);
 	}
 
 	private Allocation lookupAllocationModel() {
-		return resourceProvider.getAllocation();
+		return this.resourceProvider.getAllocation();
 	}
 
 	private UsageModel lookupUsageModel() {
-		return resourceProvider.getUsageModel();
+		return this.resourceProvider.getUsageModel();
 	}
 
 	public List<StartAction> findStartActionsOfBranchAction(String id) {
 		List<StartAction> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			var startActionElements = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> it.getElement() instanceof StartAction).toList();
+		for (AbstractTransposeFlowGraph transposeFlowGraph : flowGraphs.getTransposeFlowGraphs()) {
+			var startActionElements = transposeFlowGraph.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> it.getReferencedElement() instanceof StartAction).toList();
 
-			for (var sequenceElement : startActionElements) {
-				Optional<BranchAction> branchAction = PCMQueryUtils.findParentOfType(sequenceElement.getElement(),
+			for (var vertex : startActionElements) {
+				Optional<BranchAction> branchAction = PCMQueryUtils.findParentOfType(vertex.getReferencedElement(),
 						BranchAction.class, false);
 
 				if (branchAction.isPresent() && branchAction.get().getId().equals(id)) {
-					matches.add((StartAction) sequenceElement.getElement());
+					matches.add((StartAction) vertex.getReferencedElement());
 				}
 			}
 		}
